src/snapshots/nml__parser__tests__parse_enum_variant_decl.snap
---
source: src/parser.rs
expression: node.nodes.snapshot()
---
TypeDecl Test
  EnumDecl
    EnumVariantDecl A
