src/snapshots/nml__parser__tests__parse_record_decl_2_fields.snap
---
source: src/parser.rs
expression: node.nodes.snapshot()
---
TypeDecl Test
  RecordDecl
    RecordFieldDecl a Int
    RecordFieldDecl b Int
