src/snapshots/nml__parser__tests__parse_record_decl_3_fields_trailing_sep.snap
---
source: src/parser.rs
expression: node.nodes.snapshot()
---
TypeDecl Test
  RecordDecl
    RecordFieldDecl a Int
    RecordFieldDecl b Int
    RecordFieldDecl c Str
