src/snapshots/nml__parser__tests__parse_tuple_decl.snap
---
source: src/parser.rs
expression: node.nodes.snapshot()
---
TypeDecl Test
  TupleDecl
    EnumVariantDecl Int
