src/snapshots/nml__parser__tests__parse_tuple_decl_2_trailing.snap
---
source: src/parser.rs
expression: node.nodes.snapshot()
---
TypeDecl Test
  TupleDecl
    EnumVariantDecl Int
    EnumVariantDecl Str
